[package]
name = "shoreline-loader"
version = "2.0.0"
edition = "2021"

[dependencies]
jni = "0.21.1"
obfstr = "0.4.4"
hardware-id = "0.3.0"
sha2 = "0.10.8"
hex = "0.4.3"
fltk = { version = "1.5.6", features = ["fltk-bundled"] }
serde_json = "1.0.117"
reqwest = { version = "0.12.4", features = ["blocking", "cookies", "json"] }
zip = "2.1.3"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
lazy_static = "1.4.0"
log = "0.4.21"
aes = "0.8.4"
block-padding = "0.3.3"
cbc = "0.1.2"
home = "0.5.9"
serde = { version = "1.0.203", features = ["derive"] }
url = "2.5.2"
futures-util = "0.3.30"
futures-channel = "0.3.30"
base64 = "0.22.1"

rustls = "0.23.12"
rustls-connector = "0.21.0"
rustls-native-certs = "0.7.1"
webpki-roots = { version = "0.26.3" }
nom = "7.1.3"
rust-crypto = "0.2.36"
hyper-rustls = "0.27.2"

# Platform dependant dependencies, for message boxes

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser"] }

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26.0"
objc = "0.2.7"

[target.'cfg(target_os = "linux")'.dependencies]
gtk = "0.18.1"
glib = "0.20.1"

[profile.release]
strip = "symbols"
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"
debug = false
debug-assertions = false
overflow-checks = false
incremental = false
rpath = false

[lib]
crate-type = ["cdylib"]
path = "src/loader.rs"